# ParkingLot

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
cli/: CMakeLists.txt  main.cpp
gui/: CMakeLists.txt  MainWindow.cpp  MainWindow.hpp  main.cpp
lib/: CMakeLists.txt  CarsDensity.cpp  CarsDensity.hpp  Common.cpp  Common.hpp  DateTime.cpp  DateTime.hpp
lib/parsers/: BasicParser.cpp  BasicParser.hpp  IParser.hpp  JsonParser.cpp  JsonParser.hpp  ParsersUtils.cpp  ParsersUtils.hpp
lib/tests/: CMakeLists.txt  TestsUtils.hpp  test_BasicParser.cpp  test_CarsDensity.cpp  test_DateTime.cpp  test_Integrational.cpp  test_JsonParser.cpp
test_data/: input.json  input.txt  invalid.txt
